cabal-version: 2.2

name:                   cmdopts
version:                0.0.0.1
synopsis:               Command line parser
description:            Command line parser.
category:               Data
stability:              Experimental
homepage:               http://github.com/haskell-works/cmdopts#readme
bug-reports:            https://github.com/haskell-works/cmdopts/issues
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2023 John Ky
license:                BSD-3-Clause
license-file:           LICENSE
tested-with:            GHC == 9.6.2, GHC == 9.4.2, GHC == 9.2.4, GHC == 9.0.2, GHC == 8.10.7
build-type:             Simple
extra-source-files:     README.md

source-repository head
  type:                 git
  location:             https://github.com/haskell-works/cmdopts

common base                       { build-depends: base                       >= 4.11       && < 5      }

common bytestring                 { build-depends: bytestring                 >= 0.9        && < 0.12   }
common generic-lens               { build-depends: generic-lens               >= 2.2.2      && < 3      }
common hedgehog                   { build-depends: hedgehog                   >= 1.0        && < 1.3    }
common hspec                      { build-depends: hspec                      >= 2.4        && < 3      }
common hw-hspec-hedgehog          { build-depends: hw-hspec-hedgehog          >= 0.1        && < 0.2    }
common lens                       { build-depends: lens                       >= 5.2.3      && < 5.3    }
common selective                  { build-depends: selective                  >= 0.7        && < 0.8    }
common text                       { build-depends: text                       >= 2          && < 3      }

common cmdopts
  build-depends:        cmdopts

common config
  default-language:     Haskell2010
  ghc-options:          -Wall

library
  import:               base, config
                      , generic-lens
                      , lens
                      , selective
                      , text
  exposed-modules:      CmdOpts
                        CmdOpts.Combinators
                        CmdOpts.Parser
                        CmdOpts.Source
  other-modules:        Paths_cmdopts
  autogen-modules:      Paths_cmdopts
  hs-source-dirs:       src

test-suite cmdopts-test
  import:               base, config
                      , bytestring
                      , cmdopts
                      , hedgehog
                      , hspec
                      , hw-hspec-hedgehog
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:   hspec-discover:hspec-discover
